# Emission_Agenet_Ali

./: .env.example  .gitignore  =0.8.1  AGENTS.md  BENCHMARK_PIPELINE_DIAGNOSTIC.md  BENCHMARK_PIPELINE_WORK_SUMMARY.md  CODEBASE_STATUS_REPORT.md  CONTRIBUTING.md  CURRENT_BASELINE.md  DEEP_DIVE_1_STANDARDIZATION.md  DEEP_DIVE_2_TOOLS_AND_WORKFLOW.md  DEVELOPMENT.md  EMISSIONAGENT_CONVERSATION_UPGRADE_PLAN.md  ENGINEERING_STATUS.md  EVAL_MULTISTEP_DIAGNOSTIC.md  EXPLORATION_ROUND2.md  GIS_PHASE1_BENCHMARK_AND_CACHE_COMPLETION_REPORT.md  GIS_PHASE1_MATRIX_LOOKUP_OPTIMIZATION_REPORT.md  LICENSE  MULTI_TURN_DIAGNOSTIC.md  PHASE1B_CONSOLIDATION_REPORT.md  PHASE1C_ENTRYPOINTS_AND_EVAL_REPORT.md  PHASE1_55_REPORT.md  PHASE1_5_DIAGNOSIS.md  PHASE1_5_REPORT.md  PHASE1_7_DIAGNOSIS.md  PHASE1_DIAGNOSIS.md  PHASE2B_API_ROUTES_SECOND_EXTRACTION_REPORT.md  PHASE2C_API_CONTRACT_TESTS_REPORT.md  PHASE2D_API_SEAM_REEVALUATION_REPORT.md  PHASE2_4_GATE1_DIAGNOSIS.md  PHASE2_REPORT.md  PHASE2_SLOT_ANALYSIS.md  PHASE3B_ROUTER_SEAM_REEVALUATION_REPORT.md  PHASE3E_ROUTER_TABLE_BRANCH_PROTECTION_REPORT.md  PHASE3F_ROUTER_PAYLOAD_SEAM_EXECUTION_REPORT.md  PHASE4A_RELEASE_PREP_AND_STATUS_CONSOLIDATION_REPORT.md  PHASE4B_EXAMPLES_AND_CONTRIBUTOR_READINESS_REPORT.md  PHASE4D_BASELINE_FREEZE_REPORT.md  PHASE4E_REPO_HYGIENE_CLEANUP_REPORT.md  (+21 more)
.omx_backup_20260412_112249/: metrics.json  notepad.md
api/: __init__.py  auth.py  chart_utils.py  database.py  logging_config.py  main.py  map_export.py  models.py  response_utils.py  routes.py  session.py
calculators/: __init__.py  dispersion.py  (+4 more)
(+1085 files in other folders)
